fix z-index mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,6 +56,7 @@ path {
     height: 100vh;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 @keyframes path0 {
